remove another component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>
-  {{title}}
-</h1>
-  {{name}}
+<h1>{{title}}</h1>
+<h1>{{name}}</h1>
 <fa-other></fa-other>
-<fa-another></fa-another>
+<fa-other>
+	<h1>show up inside of other component </h1>
+</fa-other>
