add databinding component

--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -1,3 +1,11 @@
+<h5>String Interpolation</h5>
 <p>
-  databinding works!
+{{stringInterpolation}} | {{numberInterpolation}}
 </p>
+<h5>Property Binding</h5>
+<input type="text" [value]= 'stringInterpolation' />
+<p [ngClass]='{redBorder: onTest()}' >Is this styled?</p>
+<p [ngStyle]="{color: 'green'}" >Is this styled?</p>
+<h5>custom Input data binding</h5>
+<fa-property-binding [result]="1000000"></fa-property-binding>
+<fa-event-binding (clicked)='doThisWithEvent($event)'></fa-event-binding>
