try two-way data binding

--- a/src/app/databinding/databinding.component.html
+++ b/src/app/databinding/databinding.component.html
@@ -9,3 +9,5 @@
 <h5>custom Input data binding</h5>
 <fa-property-binding [result]="1000000"></fa-property-binding>
 <fa-event-binding (clicked)='doThisWithEvent($event)'></fa-event-binding>
+<p>two-way-data-binding</p>
+<fa-two-way-binding></fa-two-way-binding>
